imp/recognizer/imp-parser.output
State 30 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 73 conflicts: 5 shift/reduce
State 81 conflicts: 2 shift/reduce
State 82 conflicts: 2 shift/reduce
State 83 conflicts: 3 shift/reduce
State 96 conflicts: 3 shift/reduce
State 97 conflicts: 3 shift/reduce
State 113 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog "end of file"

    1 aexp: reference
    2     | reference "[" aexp "]"
    3     | constant
    4     | "-" aexp
    5     | aexp "+" aexp
    6     | aexp "-" aexp
    7     | aexp "*" aexp
    8     | aexp "/" aexp
    9     | aexp "%" aexp
   10     | "(" aexp ")"

   11 reference: "identifier"

   12 constant: "number"

   13 bexp: comp
   14     | "!" bexp
   15     | bexp "||" bexp
   16     | bexp "&&" bexp
   17     | "(" bexp ")"

   18 comp: aexp "=" aexp
   19     | aexp "!=" aexp
   20     | aexp "<=" aexp
   21     | aexp ">=" aexp
   22     | aexp "<" aexp
   23     | aexp ">" aexp

   24 stmt: location ":=" aexp ";"
   25     | location "," location ":=" aexp "," aexp ";"
   26     | location "[" aexp "]" ":=" aexp ";"
   27     | "if" bexp "then" block "else" block "end"
   28     | "if" bexp "then" block "end"
   29     | "while" bexp inv_list "do" block "end"
   30     | "while" bexp "do" block "end"

   31 location: "identifier"

   32 inv_list: inv
   33         | inv_list inv

   34 inv: "inv" assertion

   35 block: stmt_list

   36 stmt_list: stmt
   37          | stmt_list stmt

   38 prog: "program" "identifier" pre_list post_list "is" block "end"
   39     | "program" "identifier" post_list "is" block "end"
   40     | "program" "identifier" pre_list "is" block "end"

   41 pre_list: pre
   42         | pre_list pre

   43 pre: "pre" assertion

   44 post_list: post
   45          | post_list post

   46 post: "post" assertion

   47 assertion: comp
   48          | "!" assertion
   49          | assertion "||" assertion
   50          | assertion "&&" assertion
   51          | assertion "==>" assertion
   52          | "forall" identifier_list "," assertion
   53          | "exists" identifier_list "," assertion
   54          | "(" assertion ")"
   55          | "(" error ")"

   56 identifier_list: "identifier"
   57                | identifier_list "identifier"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256) 55
    "+" (258) 5
    "-" (259) 4 6
    "*" (260) 7
    "/" (261) 8
    "%" (262) 9
    "(" (263) 10 17 54 55
    ")" (264) 10 17 54 55
    "=" (265) 18
    "!=" (266) 19
    "<=" (267) 20
    ">=" (268) 21
    "<" (269) 22
    ">" (270) 23
    "!" (271) 14 48
    "||" (272) 15 49
    "&&" (273) 16 50
    ":=" (274) 24 25 26
    ";" (275) 24 25 26
    "," (276) 25 52 53
    "if" (277) 27 28
    "then" (278) 27 28
    "else" (279) 27
    "end" (280) 27 28 29 30 38 39 40
    "while" (281) 29 30
    "do" (282) 29 30
    "inv" (283) 34
    "[" (284) 2 26
    "]" (285) 2 26
    "program" (286) 38 39 40
    "pre" (287) 43
    "post" (288) 46
    "is" (289) 38 39 40
    "==>" (290) 51
    "forall" (291) 52
    "exists" (292) 53
    "identifier" <std::string> (293) 11 31 38 39 40 56 57
    "number" <int> (294) 12


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    aexp <imp::ast::ArithmeticExpression*> (41)
        on left: 1 2 3 4 5 6 7 8 9 10
        on right: 2 4 5 6 7 8 9 10 18 19 20 21 22 23 24 25 26
    reference <imp::ast::Reference*> (42)
        on left: 11
        on right: 1 2
    constant <imp::ast::Constant*> (43)
        on left: 12
        on right: 3
    bexp <imp::ast::BooleanExpression*> (44)
        on left: 13 14 15 16 17
        on right: 14 15 16 17 27 28 29 30
    comp <imp::ast::Comparison*> (45)
        on left: 18 19 20 21 22 23
        on right: 13 47
    stmt <imp::ast::Statement*> (46)
        on left: 24 25 26 27 28 29 30
        on right: 36 37
    location <imp::ast::Location*> (47)
        on left: 31
        on right: 24 25 26
    inv_list <std::vector<imp::ast::Invariant*>> (48)
        on left: 32 33
        on right: 29 33
    inv <imp::ast::Invariant*> (49)
        on left: 34
        on right: 32 33
    block <imp::ast::Block*> (50)
        on left: 35
        on right: 27 28 29 30 38 39 40
    stmt_list <std::vector<imp::ast::Statement*>> (51)
        on left: 36 37
        on right: 35 37
    prog <imp::ast::Program*> (52)
        on left: 38 39 40
        on right: 0
    pre_list <std::vector<imp::ast::PreCondition*>> (53)
        on left: 41 42
        on right: 38 40 42
    pre <imp::ast::PreCondition*> (54)
        on left: 43
        on right: 41 42
    post_list <std::vector<imp::ast::PostCondition*>> (55)
        on left: 44 45
        on right: 38 39 45
    post <imp::ast::PostCondition*> (56)
        on left: 46
        on right: 44 45
    assertion <imp::ast::Assertion*> (57)
        on left: 47 48 49 50 51 52 53 54 55
        on right: 34 43 46 48 49 50 51 52 53 54
    identifier_list <std::vector<std::string>> (58)
        on left: 56 57
        on right: 52 53 57


State 0

    0 $accept: . prog "end of file"

    "program"  shift, and go to state 1

    prog  go to state 2


State 1

   38 prog: "program" . "identifier" pre_list post_list "is" block "end"
   39     | "program" . "identifier" post_list "is" block "end"
   40     | "program" . "identifier" pre_list "is" block "end"

    "identifier"  shift, and go to state 3


State 2

    0 $accept: prog . "end of file"

    "end of file"  shift, and go to state 4


State 3

   38 prog: "program" "identifier" . pre_list post_list "is" block "end"
   39     | "program" "identifier" . post_list "is" block "end"
   40     | "program" "identifier" . pre_list "is" block "end"

    "pre"   shift, and go to state 5
    "post"  shift, and go to state 6

    pre_list   go to state 7
    pre        go to state 8
    post_list  go to state 9
    post       go to state 10


State 4

    0 $accept: prog "end of file" .

    $default  accept


State 5

   43 pre: "pre" . assertion

    "-"           shift, and go to state 11
    "("           shift, and go to state 12
    "!"           shift, and go to state 13
    "forall"      shift, and go to state 14
    "exists"      shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    comp       go to state 21
    assertion  go to state 22


State 6

   46 post: "post" . assertion

    "-"           shift, and go to state 11
    "("           shift, and go to state 12
    "!"           shift, and go to state 13
    "forall"      shift, and go to state 14
    "exists"      shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    comp       go to state 21
    assertion  go to state 23


State 7

   38 prog: "program" "identifier" pre_list . post_list "is" block "end"
   40     | "program" "identifier" pre_list . "is" block "end"
   42 pre_list: pre_list . pre

    "pre"   shift, and go to state 5
    "post"  shift, and go to state 6
    "is"    shift, and go to state 24

    pre        go to state 25
    post_list  go to state 26
    post       go to state 10


State 8

   41 pre_list: pre .

    $default  reduce using rule 41 (pre_list)


State 9

   39 prog: "program" "identifier" post_list . "is" block "end"
   45 post_list: post_list . post

    "post"  shift, and go to state 6
    "is"    shift, and go to state 27

    post  go to state 28


State 10

   44 post_list: post .

    $default  reduce using rule 44 (post_list)


State 11

    4 aexp: "-" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 30
    reference  go to state 19
    constant   go to state 20


State 12

   10 aexp: "(" . aexp ")"
   54 assertion: "(" . assertion ")"
   55          | "(" . error ")"

    error         shift, and go to state 31
    "-"           shift, and go to state 11
    "("           shift, and go to state 12
    "!"           shift, and go to state 13
    "forall"      shift, and go to state 14
    "exists"      shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 32
    reference  go to state 19
    constant   go to state 20
    comp       go to state 21
    assertion  go to state 33


State 13

   48 assertion: "!" . assertion

    "-"           shift, and go to state 11
    "("           shift, and go to state 12
    "!"           shift, and go to state 13
    "forall"      shift, and go to state 14
    "exists"      shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    comp       go to state 21
    assertion  go to state 34


State 14

   52 assertion: "forall" . identifier_list "," assertion

    "identifier"  shift, and go to state 35

    identifier_list  go to state 36


State 15

   53 assertion: "exists" . identifier_list "," assertion

    "identifier"  shift, and go to state 35

    identifier_list  go to state 37


State 16

   11 reference: "identifier" .

    $default  reduce using rule 11 (reference)


State 17

   12 constant: "number" .

    $default  reduce using rule 12 (constant)


State 18

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp
   18 comp: aexp . "=" aexp
   19     | aexp . "!=" aexp
   20     | aexp . "<=" aexp
   21     | aexp . ">=" aexp
   22     | aexp . "<" aexp
   23     | aexp . ">" aexp

    "+"   shift, and go to state 38
    "-"   shift, and go to state 39
    "*"   shift, and go to state 40
    "/"   shift, and go to state 41
    "%"   shift, and go to state 42
    "="   shift, and go to state 43
    "!="  shift, and go to state 44
    "<="  shift, and go to state 45
    ">="  shift, and go to state 46
    "<"   shift, and go to state 47
    ">"   shift, and go to state 48


State 19

    1 aexp: reference .
    2     | reference . "[" aexp "]"

    "["  shift, and go to state 49

    $default  reduce using rule 1 (aexp)


State 20

    3 aexp: constant .

    $default  reduce using rule 3 (aexp)


State 21

   47 assertion: comp .

    $default  reduce using rule 47 (assertion)


State 22

   43 pre: "pre" assertion .
   49 assertion: assertion . "||" assertion
   50          | assertion . "&&" assertion
   51          | assertion . "==>" assertion

    "||"   shift, and go to state 50
    "&&"   shift, and go to state 51
    "==>"  shift, and go to state 52

    $default  reduce using rule 43 (pre)


State 23

   46 post: "post" assertion .
   49 assertion: assertion . "||" assertion
   50          | assertion . "&&" assertion
   51          | assertion . "==>" assertion

    "||"   shift, and go to state 50
    "&&"   shift, and go to state 51
    "==>"  shift, and go to state 52

    $default  reduce using rule 46 (post)


State 24

   40 prog: "program" "identifier" pre_list "is" . block "end"

    "if"          shift, and go to state 53
    "while"       shift, and go to state 54
    "identifier"  shift, and go to state 55

    stmt       go to state 56
    location   go to state 57
    block      go to state 58
    stmt_list  go to state 59


State 25

   42 pre_list: pre_list pre .

    $default  reduce using rule 42 (pre_list)


State 26

   38 prog: "program" "identifier" pre_list post_list . "is" block "end"
   45 post_list: post_list . post

    "post"  shift, and go to state 6
    "is"    shift, and go to state 60

    post  go to state 28


State 27

   39 prog: "program" "identifier" post_list "is" . block "end"

    "if"          shift, and go to state 53
    "while"       shift, and go to state 54
    "identifier"  shift, and go to state 55

    stmt       go to state 56
    location   go to state 57
    block      go to state 61
    stmt_list  go to state 59


State 28

   45 post_list: post_list post .

    $default  reduce using rule 45 (post_list)


State 29

   10 aexp: "(" . aexp ")"

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 62
    reference  go to state 19
    constant   go to state 20


State 30

    4 aexp: "-" aexp .
    5     | aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp

    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42

    "%"       [reduce using rule 4 (aexp)]
    $default  reduce using rule 4 (aexp)


State 31

   55 assertion: "(" error . ")"

    ")"  shift, and go to state 63


State 32

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp
   10     | "(" aexp . ")"
   18 comp: aexp . "=" aexp
   19     | aexp . "!=" aexp
   20     | aexp . "<=" aexp
   21     | aexp . ">=" aexp
   22     | aexp . "<" aexp
   23     | aexp . ">" aexp

    "+"   shift, and go to state 38
    "-"   shift, and go to state 39
    "*"   shift, and go to state 40
    "/"   shift, and go to state 41
    "%"   shift, and go to state 42
    ")"   shift, and go to state 64
    "="   shift, and go to state 43
    "!="  shift, and go to state 44
    "<="  shift, and go to state 45
    ">="  shift, and go to state 46
    "<"   shift, and go to state 47
    ">"   shift, and go to state 48


State 33

   49 assertion: assertion . "||" assertion
   50          | assertion . "&&" assertion
   51          | assertion . "==>" assertion
   54          | "(" assertion . ")"

    ")"    shift, and go to state 65
    "||"   shift, and go to state 50
    "&&"   shift, and go to state 51
    "==>"  shift, and go to state 52


State 34

   48 assertion: "!" assertion .
   49          | assertion . "||" assertion
   50          | assertion . "&&" assertion
   51          | assertion . "==>" assertion

    "||"   shift, and go to state 50
    "&&"   shift, and go to state 51
    "==>"  shift, and go to state 52

    "==>"     [reduce using rule 48 (assertion)]
    $default  reduce using rule 48 (assertion)


State 35

   56 identifier_list: "identifier" .

    $default  reduce using rule 56 (identifier_list)


State 36

   52 assertion: "forall" identifier_list . "," assertion
   57 identifier_list: identifier_list . "identifier"

    ","           shift, and go to state 66
    "identifier"  shift, and go to state 67


State 37

   53 assertion: "exists" identifier_list . "," assertion
   57 identifier_list: identifier_list . "identifier"

    ","           shift, and go to state 68
    "identifier"  shift, and go to state 67


State 38

    5 aexp: aexp "+" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 69
    reference  go to state 19
    constant   go to state 20


State 39

    6 aexp: aexp "-" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 70
    reference  go to state 19
    constant   go to state 20


State 40

    7 aexp: aexp "*" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 71
    reference  go to state 19
    constant   go to state 20


State 41

    8 aexp: aexp "/" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 72
    reference  go to state 19
    constant   go to state 20


State 42

    9 aexp: aexp "%" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 73
    reference  go to state 19
    constant   go to state 20


State 43

   18 comp: aexp "=" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 74
    reference  go to state 19
    constant   go to state 20


State 44

   19 comp: aexp "!=" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 75
    reference  go to state 19
    constant   go to state 20


State 45

   20 comp: aexp "<=" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 76
    reference  go to state 19
    constant   go to state 20


State 46

   21 comp: aexp ">=" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 77
    reference  go to state 19
    constant   go to state 20


State 47

   22 comp: aexp "<" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 78
    reference  go to state 19
    constant   go to state 20


State 48

   23 comp: aexp ">" . aexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 79
    reference  go to state 19
    constant   go to state 20


State 49

    2 aexp: reference "[" . aexp "]"

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 80
    reference  go to state 19
    constant   go to state 20


State 50

   49 assertion: assertion "||" . assertion

    "-"           shift, and go to state 11
    "("           shift, and go to state 12
    "!"           shift, and go to state 13
    "forall"      shift, and go to state 14
    "exists"      shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    comp       go to state 21
    assertion  go to state 81


State 51

   50 assertion: assertion "&&" . assertion

    "-"           shift, and go to state 11
    "("           shift, and go to state 12
    "!"           shift, and go to state 13
    "forall"      shift, and go to state 14
    "exists"      shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    comp       go to state 21
    assertion  go to state 82


State 52

   51 assertion: assertion "==>" . assertion

    "-"           shift, and go to state 11
    "("           shift, and go to state 12
    "!"           shift, and go to state 13
    "forall"      shift, and go to state 14
    "exists"      shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    comp       go to state 21
    assertion  go to state 83


State 53

   27 stmt: "if" . bexp "then" block "else" block "end"
   28     | "if" . bexp "then" block "end"

    "-"           shift, and go to state 11
    "("           shift, and go to state 84
    "!"           shift, and go to state 85
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    bexp       go to state 86
    comp       go to state 87


State 54

   29 stmt: "while" . bexp inv_list "do" block "end"
   30     | "while" . bexp "do" block "end"

    "-"           shift, and go to state 11
    "("           shift, and go to state 84
    "!"           shift, and go to state 85
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    bexp       go to state 88
    comp       go to state 87


State 55

   31 location: "identifier" .

    $default  reduce using rule 31 (location)


State 56

   36 stmt_list: stmt .

    $default  reduce using rule 36 (stmt_list)


State 57

   24 stmt: location . ":=" aexp ";"
   25     | location . "," location ":=" aexp "," aexp ";"
   26     | location . "[" aexp "]" ":=" aexp ";"

    ":="  shift, and go to state 89
    ","   shift, and go to state 90
    "["   shift, and go to state 91


State 58

   40 prog: "program" "identifier" pre_list "is" block . "end"

    "end"  shift, and go to state 92


State 59

   35 block: stmt_list .
   37 stmt_list: stmt_list . stmt

    "if"          shift, and go to state 53
    "while"       shift, and go to state 54
    "identifier"  shift, and go to state 55

    $default  reduce using rule 35 (block)

    stmt      go to state 93
    location  go to state 57


State 60

   38 prog: "program" "identifier" pre_list post_list "is" . block "end"

    "if"          shift, and go to state 53
    "while"       shift, and go to state 54
    "identifier"  shift, and go to state 55

    stmt       go to state 56
    location   go to state 57
    block      go to state 94
    stmt_list  go to state 59


State 61

   39 prog: "program" "identifier" post_list "is" block . "end"

    "end"  shift, and go to state 95


State 62

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp
   10     | "(" aexp . ")"

    "+"  shift, and go to state 38
    "-"  shift, and go to state 39
    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42
    ")"  shift, and go to state 64


State 63

   55 assertion: "(" error ")" .

    $default  reduce using rule 55 (assertion)


State 64

   10 aexp: "(" aexp ")" .

    $default  reduce using rule 10 (aexp)


State 65

   54 assertion: "(" assertion ")" .

    $default  reduce using rule 54 (assertion)


State 66

   52 assertion: "forall" identifier_list "," . assertion

    "-"           shift, and go to state 11
    "("           shift, and go to state 12
    "!"           shift, and go to state 13
    "forall"      shift, and go to state 14
    "exists"      shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    comp       go to state 21
    assertion  go to state 96


State 67

   57 identifier_list: identifier_list "identifier" .

    $default  reduce using rule 57 (identifier_list)


State 68

   53 assertion: "exists" identifier_list "," . assertion

    "-"           shift, and go to state 11
    "("           shift, and go to state 12
    "!"           shift, and go to state 13
    "forall"      shift, and go to state 14
    "exists"      shift, and go to state 15
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    comp       go to state 21
    assertion  go to state 97


State 69

    5 aexp: aexp . "+" aexp
    5     | aexp "+" aexp .
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp

    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42

    "%"       [reduce using rule 5 (aexp)]
    $default  reduce using rule 5 (aexp)


State 70

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    6     | aexp "-" aexp .
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp

    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42

    "%"       [reduce using rule 6 (aexp)]
    $default  reduce using rule 6 (aexp)


State 71

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    7     | aexp "*" aexp .
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp

    "%"  shift, and go to state 42

    "%"       [reduce using rule 7 (aexp)]
    $default  reduce using rule 7 (aexp)


State 72

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    8     | aexp "/" aexp .
    9     | aexp . "%" aexp

    "%"  shift, and go to state 42

    "%"       [reduce using rule 8 (aexp)]
    $default  reduce using rule 8 (aexp)


State 73

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp
    9     | aexp "%" aexp .

    "+"  shift, and go to state 38
    "-"  shift, and go to state 39
    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42

    "+"       [reduce using rule 9 (aexp)]
    "-"       [reduce using rule 9 (aexp)]
    "*"       [reduce using rule 9 (aexp)]
    "/"       [reduce using rule 9 (aexp)]
    "%"       [reduce using rule 9 (aexp)]
    $default  reduce using rule 9 (aexp)


State 74

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp
   18 comp: aexp "=" aexp .

    "+"  shift, and go to state 38
    "-"  shift, and go to state 39
    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42

    $default  reduce using rule 18 (comp)


State 75

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp
   19 comp: aexp "!=" aexp .

    "+"  shift, and go to state 38
    "-"  shift, and go to state 39
    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42

    $default  reduce using rule 19 (comp)


State 76

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp
   20 comp: aexp "<=" aexp .

    "+"  shift, and go to state 38
    "-"  shift, and go to state 39
    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42

    $default  reduce using rule 20 (comp)


State 77

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp
   21 comp: aexp ">=" aexp .

    "+"  shift, and go to state 38
    "-"  shift, and go to state 39
    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42

    $default  reduce using rule 21 (comp)


State 78

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp
   22 comp: aexp "<" aexp .

    "+"  shift, and go to state 38
    "-"  shift, and go to state 39
    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42

    $default  reduce using rule 22 (comp)


State 79

    5 aexp: aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp
   23 comp: aexp ">" aexp .

    "+"  shift, and go to state 38
    "-"  shift, and go to state 39
    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42

    $default  reduce using rule 23 (comp)


State 80

    2 aexp: reference "[" aexp . "]"
    5     | aexp . "+" aexp
    6     | aexp . "-" aexp
    7     | aexp . "*" aexp
    8     | aexp . "/" aexp
    9     | aexp . "%" aexp

    "+"  shift, and go to state 38
    "-"  shift, and go to state 39
    "*"  shift, and go to state 40
    "/"  shift, and go to state 41
    "%"  shift, and go to state 42
    "]"  shift, and go to state 98


State 81

   49 assertion: assertion . "||" assertion
   49          | assertion "||" assertion .
   50          | assertion . "&&" assertion
   51          | assertion . "==>" assertion

    "||"   shift, and go to state 50
    "==>"  shift, and go to state 52

    "||"      [reduce using rule 49 (assertion)]
    "==>"     [reduce using rule 49 (assertion)]
    $default  reduce using rule 49 (assertion)


State 82

   49 assertion: assertion . "||" assertion
   50          | assertion . "&&" assertion
   50          | assertion "&&" assertion .
   51          | assertion . "==>" assertion

    "||"   shift, and go to state 50
    "&&"   shift, and go to state 51
    "==>"  shift, and go to state 52

    "&&"      [reduce using rule 50 (assertion)]
    "==>"     [reduce using rule 50 (assertion)]
    $default  reduce using rule 50 (assertion)


State 83

   49 assertion: assertion . "||" assertion
   50          | assertion . "&&" assertion
   51          | assertion . "==>" assertion
   51          | assertion "==>" assertion .

    "||"   shift, and go to state 50
    "&&"   shift, and go to state 51
    "==>"  shift, and go to state 52

    "||"      [reduce using rule 51 (assertion)]
    "&&"      [reduce using rule 51 (assertion)]
    "==>"     [reduce using rule 51 (assertion)]
    $default  reduce using rule 51 (assertion)


State 84

   10 aexp: "(" . aexp ")"
   17 bexp: "(" . bexp ")"

    "-"           shift, and go to state 11
    "("           shift, and go to state 84
    "!"           shift, and go to state 85
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 32
    reference  go to state 19
    constant   go to state 20
    bexp       go to state 99
    comp       go to state 87


State 85

   14 bexp: "!" . bexp

    "-"           shift, and go to state 11
    "("           shift, and go to state 84
    "!"           shift, and go to state 85
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 18
    reference  go to state 19
    constant   go to state 20
    bexp       go to state 100
    comp       go to state 87


State 86

   15 bexp: bexp . "||" bexp
   16     | bexp . "&&" bexp
   27 stmt: "if" bexp . "then" block "else" block "end"
   28     | "if" bexp . "then" block "end"

    "||"    shift, and go to state 101
    "&&"    shift, and go to state 102
    "then"  shift, and go to state 103


State 87

   13 bexp: comp .

    $default  reduce using rule 13 (bexp)


State 88

   15 bexp: bexp . "||" bexp
   16     | bexp . "&&" bexp
   29 stmt: "while" bexp . inv_list "do" block "end"
   30     | "while" bexp . "do" block "end"

    "||"   shift, and go to state 101
    "&&"   shift, and go to state 102
    "do"   shift, and go to state 104
    "inv"  shift, and go to state 105

    inv_list  go to state 106
    inv       go to state 107


State 89

   24 stmt: location ":=" . aexp ";"

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 108
    reference  go to state 19
    constant   go to state 20


State 90

   25 stmt: location "," . location ":=" aexp "," aexp ";"

    "identifier"  shift, and go to state 55

    location  go to state 109


State 91

   26 stmt: location "[" . aexp "]" ":=" aexp ";"

    "-"           shift, and go to state 11
    "("           shift, and go to state 29
    "identifier"  shift, and go to state 16
    "number"      shift, and go to state 17

    aexp       go to state 110
    reference  go to state 19
    constant   go to state 20


State 92

   40 prog: "program" "identifier" pre_list "is" block "end" .

    $default  reduce using rule 40 (prog)


State 93

   37 stmt_list: stmt_list stmt .

    $default  reduce using rule 37 (stmt_list)


State 94

   38 prog: "program" "identifier" pre_list post_list "is" block . "end"

    "end"  shift, and go to state 111


State 95

   39 prog: "program" "identifier" post_list "is" block "end" .

    $default  reduce using rule 39 (prog)


State 96

   49 assertion: assertion . "||" assertion
   50          | assertion . "&&" assertion
   51          | assertion . "==>" assertion
   52          | "forall" identifier_list "," assertion .

    "||"   shift, and go to state 50
    "&&"   shift, and go to state 51
    "==>"  shift, and go to state 52

    "||"      [reduce using rule 52 (assertion)]
    "&&"      [reduce using rule 52 (assertion)]
    "==>"     [reduce using rule 52 (assertion)]
    $default  reduce using rule 52 (assertion)


State 97

   49 assertion: assertion . "||" assertion
   50          | assertion . "&&" assertion
   51          | assertion . "==>" assertion
   53          | "exists" identifier_list "," assertion .

    "||"   shift, and go to state 50
    "&&"   shift, and go to state 51
    "==>"  shift, and go to state 52

    "||"      [reduce using rule 53 (assertion)]
    "&&"      [reduce using rule 53 (assertion)]
    "==>"     [reduce using rule 53 (assertion)]
    $default  reduce using rule 53 (assertion)


State 98

    2 aexp: reference "[" aexp "]" .

    $default  reduce using rule 2 (aexp)


State 99

   15 bexp: bexp . "||" bexp
   16     | bexp . "&&" bexp
   17     | "(" bexp . ")"

    ")"   shift, and go to state 112
    "||"  shift, and go to state 101
    "&&"  shift, and go to state 102


State 100

   14 bexp: "!" bexp .
   15     | bexp . "||" bexp
   16     | bexp . "&&" bexp
